<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/space_4"
        android:paddingEnd="@dimen/space_12">

        <ImageButton
            android:id="@+id/cancelButton"
            android:layout_width="@dimen/icon_button"
            android:layout_height="@dimen/icon_button"
            android:background="@drawable/bg_round_ripple"
            android:contentDescription="@string/cancel"
            android:src="@drawable/ic_close"
            app:tint="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_8"
            android:layout_weight="1"
            android:text="@string/crop_photo"
            android:textAppearance="@style/TextAppearance.App.Title"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/doneButton"
            style="@style/Widget.App.Button.Pill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/done" />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <com.contacts.manager.ai.smartdialer.voicemessages.calling.callapp.screens.editcontact.CropImageView
            android:id="@+id/cropView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/crop_photo" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="@dimen/space_12"
        android:paddingBottom="@dimen/space_16">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rotateButton"
            style="@style/Widget.App.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotate"
            android:textColor="@color/white"
            app:icon="@drawable/ic_rotate_right"
            app:iconTint="@color/white" />
    </LinearLayout>
</LinearLayout>
