<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include
        android:id="@+id/topBar"
        layout="@layout/include_top_bar" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/screen_padding"
            android:paddingEnd="@dimen/screen_padding"
            android:paddingBottom="@dimen/space_24">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/space_4"
                android:paddingEnd="@dimen/space_4"
                android:paddingBottom="@dimen/space_16"
                android:text="@string/permissions_subtitle"
                android:textAppearance="@style/TextAppearance.App.BodySecondary" />

            <LinearLayout
                android:id="@+id/roleGroup"
                style="@style/Widget.App.SettingsGroup" />

            <TextView
                style="@style/Widget.App.SettingsSection"
                android:text="@string/permissions_app" />

            <LinearLayout
                android:id="@+id/permissionGroup"
                style="@style/Widget.App.SettingsGroup" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/systemSettingsButton"
                style="@style/Widget.App.Button.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/space_16"
                android:text="@string/open_system_settings" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
